# django-tracking-model

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
tests/: models.py  settings.py  signals.py  test_tracking_model.py
tracking_model/: __init__.py  mixins.py
